# file-monitor

./: file-monitor.vapi  meson.build
src/: file-monitor.c  file-monitor.h
vapi/: file-monitor.vapi
